assets/css/toc.css
/* Define basic style for list items,paragraphs, titles and sub-titles§ and
buttons and links */

/* Color Palette */
:root {
	--primary-green: #469242;
	--highlight-yellow: #ffcb02;
	--dark-yellow: #725c04;
	--black: black;
	--secondary-green: #97e995;
	--deep-purple: #312a3a;
}

/* Fonts and background */
body {
	font-family: 'Merriweather', serif; /* For body text */
	font-family: 'Lato', sans-serif; /* For headings */
	background-color: var(--black);
	margin: 0;
	padding: 50px;
}
/* Style headings */
.heading {
	font-family: 'Lato', sans-serif;
	color: var(--highlight-yellow);
	font-size: 1em;
}
/* Style sub-headings  */
.sub-heading {
	font-family: 'Merriweather', serif;
	color: var(--secondary-green);
	font-size: 0.8em;
}

/* Style usual paragraph texts. This class has not been yet used.*/
.paragraph-text {
	font-family: 'Merriweather', serif;
	font-size: 1.5em;
	line-height: 1.7em;
	color: var(--dark-yellow);
	margin-bottom: 1em;
}
/* Style spacious lists. */
.spaced-list {
	font-family: 'Merriweather', serif;
	font-size: 1.8em;
	line-height: 3em;
	color: var(--dark-yellow);
	margin-bottom: 1em;
	padding: 1.5em;
}
/* Style usual text */
.usual-text {
	font-family: 'Merriweather', serif;
	font-size: 1em;
	line-height: 1.2;
	color: var(--black);
}
/*Style highlighted text */
.highlighted-text {
	background-color: #ffcb02;
	color: black !important;
}

/* Style header items */
.head {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 0;
	margin: 0;
}
/*Style title container */
.title-container {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	margin: auto;
	padding: 0;
}

.main-title {
	display: flex;
	justify-content: center;
	font-family: 'Lato', sans-serif;
	font-size: 2.5em;
	font-weight: bold;
	color: var(--primary-green);
	margin-bottom: 0.5em;
}

.sub-title {
	font-family: 'Lato', sans-serif;
	font-size: 1.3em;
	font-style: italic;
	color: var(--secondary-green);
	margin-bottom: 0.5em;
	margin-top: 0;
	padding: 0em 1em 0em 1em;
}

/* Style icons images */
.iconimg {
	width: 4em;
	display: flex;
	justify-content: center;
	align-items: center;
}

/*style links and anchor items */
a {
	font-family: 'Merriweather', serif;
	font-size: 1em;
	text-decoration: none;
	display: flex;
	transition: transform 0.5s ease-in-out; /* Smooth transition effect */
}

/* Style anchor item behavor */
a:hover {
	transform: scale(1.05);
	padding: 10px 0px 10px 0px;
}

a:active {
	transform: scale(0.5);
}
/* Style equations */

.equation {
	font-family: 'Courier New', monospace;
	font-size: 1.2em;
	color: var(--deep-purple);
	background-color: var(--highlight-yellow);
	padding: 0.5em;
	border-radius: 5px;
	display: inline-block;
}

/* Style buttons */

button {
	display: flex;
	padding: 10px;
	width: 100%;
	background-color: var(--highlight-yellow);
	color: var(--black);
	border-radius: 8px;
	transition: transform 0.3s ease;
}

button:hover {
	transform: scale(1.05);
}

button:active {
	transform: scale(0.8);
	background-color: var(--dark-yellow);
}

/*  Style Navigation bar  */

.nav-bar {
	margin: 20px;
	display: flex;
	justify-content: space-around;
	align-items: center;
}

.modules-dropdown {
	display: flex;
	flex-wrap: wrap;
	margin-right: 20px;
}

.navitems {
	margin-right: 10px;
	margin-bottom: 8px;
	min-width: 75px;
	flex-basis: 1;
}

.moduleitem {
	min-width: 95px;
	margin-right: 10%;
}

.modules-dropdown-contents {
	display: flex;
	flex-direction: row;
	width: 100%;
	flex-flow: nowrap;
	padding: 8px;
	margin-bottom: 8px;
	margin-right: 8px;
	font-size: 0.8em;
	border-radius: 8px;
}

.hide-element {
	display: none;
}
/* Add media queries to make navigation bar responsive */
@media (max-width: 757px) {
	body {
		padding: 0;
		width: 100%;
	}
	.main-title {
		font-size: 1.5em;
		font-weight: bold;
	}
	.sub-title {
		font-size: 1em;
		margin-bottom: 0.5em;
		margin-top: 0;
		padding: 1em;
	}
	.contents {
		font-size: 1.3em;
		line-height: 1.5em;
		margin-bottom: 1em;
		padding: 0.5em;
	}
	button {
		width: 100%;
		flex: 1;
	}
	.moduleitem {
		width: 100%;
	}
}

.dropbtn {
	margin-top: 10px;
	display: flex;
	justify-content: center;
}

.shrink-navbar {
	font-size: 0.8em;
	width: 100%;
	display: flex;
	flex-direction: column;
	position: relative;
	padding: 0.5em;
}

.inactive-menu-button {
	background-color: #312a3a;
}

/* Animations */
@keyframes grow {
	0% {
		transform: scale(0.2); /* Start with 20% of original size */
	}
	100% {
		transform: scale(1); /* End with 100% of original size */
	}
}
@keyframes shrink {
	0% {
		transform: scale(1.3); /* Start with 50% of original size */
	}
	100% {
		transform: scale(1); /* End with 150% of original size */
	}
}

@keyframes typeWriter {
	from {
		width: 0;
		visibility: visible; /* Make text visible when animation starts */
	}
	to {
		width: 100%;
		visibility: visible; /* Make text visible when animation starts */
	}
}

/* Apply the animations */
.main-title,
.iconimg,
.sub-title {
	animation: grow 2s ease-out; /* 0.5s duration, ease easing */
}

.objectives-list li {
	display: block;
	overflow: hidden; /* Ensures text doesn't overflow */
	white-space: nowrap; /* Ensures text doesn't wrap */
	visibility: hidden;
	animation: typeWriter 5s steps(150, end); /* Adjust duration and steps as needed */
	animation-fill-mode: forwards; /* Ensures the animation stays at the end state */
}
.objectives-list li:nth-child(1) {
	animation-delay: 0s;
}
.objectives-list li:nth-child(2) {
	animation-delay: 1s;
}
.objectives-list li:nth-child(3) {
	animation-delay: 3s;
}
.objectives-list li:nth-child(4) {
	animation-delay: 5s;
}
.objectives-listli:nth-child(5) {
	animation-delay: 7s;
}

